--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
 			<artifactId>tyrus-standalone-client</artifactId>
 			<version>1.9</version>
 		</dependency>
+		<dependency>
+			<groupId>net.jadler</groupId>
+			<artifactId>jadler-all</artifactId>
+			<version>1.3.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 	<reporting>
 		<plugins>
